add minio root password to the supabase .env

--- a/scripts/environment_variables/templates/supabase.env.template
+++ b/scripts/environment_variables/templates/supabase.env.template
@@ -103,6 +103,12 @@ POSTGRES_PORT=5432
 # default user is postgres
 
 ############
+# Minio - Configuration for the Minio (s3 compatibility layer) object storage service.
+############
+
+MINIO_ROOT_PASSWORD="{{MINIO_ROOT_PASSWORD}}"
+
+############
 # Supavisor -- Database pooler
 ############
 POOLER_PROXY_PORT_TRANSACTION=6543
