--- a/scripts/environment_variables/templates/supabase.env.template
+++ b/scripts/environment_variables/templates/supabase.env.template
@@ -106,7 +106,7 @@ POSTGRES_PORT=5432
 # Minio - Configuration for the Minio (s3 compatibility layer) object storage service.
 ############
 
-MINIO_ROOT_PASSWORD="{{MINIO_ROOT_PASSWORD}}"
+MINIO_PASSWORD="{{MINIO_PASSWORD}}"
 
 ############
 # Supavisor -- Database pooler
