update .env variables template

--- a/scripts/environment_variables/templates/stackend.env.template
+++ b/scripts/environment_variables/templates/stackend.env.template
@@ -279,11 +279,12 @@ REPLICATE_API_TOKEN=
 # RESEND
 RESEND_API_KEY=
 
-# S3
-S3_AWS_ACCESS_KEY=
-S3_AWS_REGION=
-S3_AWS_SECRET_ACCESS_KEY=
-S3_USERCONTENT_PUBLIC_BUCKET=
+# S3 (Configured to use MinIO on-premise by default.)
+S3_ENDPOINT_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:9000"
+S3_USERCONTENT_PUBLIC_BUCKET=stack-ai-usercontent
+S3_AWS_ACCESS_KEY="supa-storage"
+S3_AWS_REGION="us-east-1"
+S3_AWS_SECRET_ACCESS_KEY="{{MINIO_PASSWORD}}"
 
 # SERPER
 SERPER_API_KEY=
