chore: envars + script

--- a/scripts/environment_variables/templates/stackend.env.template
+++ b/scripts/environment_variables/templates/stackend.env.template
@@ -126,6 +126,9 @@ REDIS_URL=redis://redis:6379
 ENVIRONMENT='production'
 DEPLOYMENT_ENVIRONMENT='production_stackend'
 
+# VARIABLE: Allow Parallel Flow Execution
+# DESCRIPTION: This is the flag control wether the flow gets executed in parallel or in series.
+ALLOW_PARALLEL_FLOW_EXECUTION=true
 
 # #########################################################
 # Third party services (fill the ones you intend to use)
@@ -230,14 +233,20 @@ GOOGLE_PALM_API=
 GOOGLE_SHEET_PRIVATE_KEY=
 GOOGLE_SHEET_SPREADSHEET_ID=
 GOOGLE_SHEET_WORKSHEET_NAME=
+GOOGLE_WORKSPACE_CLIENT_ID=
+GOOGLE_WORKSPACE_CLIENT_SECRET=
 
+# JIRA
+JIRA_CLIENT_ID=
+JIRA_CLIENT_SECRET=
 
+# ZENDESK
+ZENDESK_CLIENT_ID=
+ZENDESK_CLIENT_SECRET=
 
 # HUBSPOT
 HUBSPOT_CLIENT_ID=
 HUBSPOT_CLIENT_SECRET=
-
-
 
 # CALENDLY
 LOCAL_CALENDLY_CLIENT_ID=
@@ -292,6 +301,7 @@ SERP_API_KEY=
 
 # STRIPE
 STRIPE_SECRET_KEY='?'
+STRIPE_WEBHOOK_SECRET=
 
 # TOGETHERAI
 TOGETHER_AI_API_KEY=
@@ -305,3 +315,43 @@ TYPEFORM_CLIENT_SECRET=
 
 # WOLFRAM
 WOLFRAM_APP_ID=
+
+# SHAREPOINT
+sharepoint_client_id=
+sharepoint_client_secret=
+
+# SERVICENOW
+SERVICENOW_CLIENT_ID=
+SERVICENOW_CLIENT_SECRET=
+
+# APIFY
+APIFY_API_KEY=
+APIFY_MAX_CRAWL_DEPTH=
+APIFY_TOKEN=
+
+# APRYSE
+APRYSE_API_KEY=
+
+# CEREBRAS
+CEREBRAS_API_KEY=
+
+# CONFLUENCE
+CONFLUENCE_CLIENT_ID=
+CONFLUENCE_CLIENT_SECRET=
+
+# NGROK
+NGROK_AUTHTOKEN=
+NGROK_DOMAIN=
+NGROK_URL=
+
+# SCRAPIN
+SCRAPIN_API_KEY=
+
+# XAI
+XAI_API_KEY=
+
+# LLAMA PARSE
+llama_parse_api_key=
+
+# MULTI ON
+multi_on_api_key=
