--- a/stackweb/Dockerfile
+++ b/stackweb/Dockerfile
@@ -31,6 +31,7 @@ ARG NEXT_PUBLIC_TYPEFORM_CLIENT_ID
 ARG NEXT_PUBLIC_URL
 ARG NEXT_PUBLIC_VERCEL_ENV
 ARG NEXT_PUBLIC_ZENDESK_CLIENT_ID
+ARG NEXT_PUBLIC_LEADERBOARD_API_URL
 ARG REACT_APP_ENV
 ARG RESEND_API_KEY
 ARG SHEET_ID
@@ -40,6 +41,9 @@ ARG SPREADSHEET_ID
 ARG STRIPE_SECRET_KEY
 ARG STRIPE_WEBHOOK_SECRET
 ARG SUPABASE_SERVICE_ROLE_KEY
+ARG FONTAWESOME_PACKAGE_TOKEN
+ARG NPM_RC
+ARG TIPTAP_PRO_TOKEN
 ARG VERCEL_ENV
 
 RUN \
