--- a/scripts/environment_variables/templates/stackweb.env.template
+++ b/scripts/environment_variables/templates/stackweb.env.template
@@ -94,6 +94,7 @@ NEXT_PUBLIC_CONFLUENCE_CLIENT_ID="<your-confluence-client-id>"
 NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID="<your-google-workspace-client-id>"
 NEXT_PUBLIC_STRIPE_CLIENT_ID="<your-stripe-client-id>"
 NEXT_PUBLIC_ZENDESK_CLIENT_ID="<your-zendesk-client-id>"
+NEXT_PUBLIC_LEADERBOARD_API_URL=
 
 # Private keys used in stackweb container
 # Update the values of the integrations you want to use
@@ -107,4 +108,7 @@ STRIPE_SECRET_KEY="<your-stripe-secret-key>"
 STRIPE_WEBHOOK_SECRET="<your-stripe-webhook-secret>"
 GOOGLE_CLIENT_EMAIL="mail@example.io"
 GOOGLE_SERVICE_PRIVATE_KEY="<your-private-key>"
+FONTAWESOME_PACKAGE_TOKEN="<font-awesome-package-token>"
+TIPTAP_PRO_TOKEN=
+NPM_RC=
 REACT_APP_ENV="production"
