--- a/stackweb/docker-compose.yml
+++ b/stackweb/docker-compose.yml
@@ -37,6 +37,7 @@ services:
         - NEXT_PUBLIC_URL=${NEXT_PUBLIC_URL}
         - NEXT_PUBLIC_VERCEL_ENV=${NEXT_PUBLIC_VERCEL_ENV}
         - NEXT_PUBLIC_ZENDESK_CLIENT_ID=${NEXT_PUBLIC_ZENDESK_CLIENT_ID}
+        - NEXT_PUBLIC_LEADERBOARD_API_URL=${NEXT_PUBLIC_LEADERBOARD_API_URL}
         - REACT_APP_ENV=${REACT_APP_ENV}
         - RESEND_API_KEY=${RESEND_API_KEY}
         - SHEET_ID=${SHEET_ID}
@@ -45,6 +46,9 @@ services:
         - SPREADSHEET_ID=${SPREADSHEET_ID}
         - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
         - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+        - FONTAWESOME_PACKAGE_TOKEN=${FONTAWESOME_PACKAGE_TOKEN}
+        - NPM_RC=${NPM_RC}
+        - TIPTAP_PRO_TOKEN=${TIPTAP_PRO_TOKEN}
         - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
         - VERCEL_ENV=${VERCEL_ENV}
 
