--- a/scripts/environment_variables/templates/stackend.env.template
+++ b/scripts/environment_variables/templates/stackend.env.template
@@ -127,7 +127,7 @@ ENVIRONMENT='production'
 DEPLOYMENT_ENVIRONMENT='production_stackend'
 
 # VARIABLE: Allow Parallel Flow Execution
-# DESCRIPTION: Whether the flow is executed in parallel or sequentially.
+# DESCRIPTION: Whether the flow in the workflow builder is executed in parallel or sequentially.
 ALLOW_PARALLEL_FLOW_EXECUTION=true
 
 # #########################################################
