--- a/scripts/environment_variables/templates/stackend.env.template
+++ b/scripts/environment_variables/templates/stackend.env.template
@@ -11,7 +11,7 @@
 #
 ########################################################
 
-ON_PREMISE="true'
+ON_PREMISE="true"
 
 # #########################################################
 # MAIN NETWORKING VARIABLES
