--- a/scripts/environment_variables/templates/stackweb.env.template
+++ b/scripts/environment_variables/templates/stackweb.env.template
@@ -67,6 +67,7 @@ SUPABASE_SERVICE_ROLE_KEY="{{SERVICE_ROLE_KEY}}"
 # Environment configuration. It is recommended to keep this with the default values.
 NEXT_PUBLIC_VERCEL_ENV="production"
 NEXT_PUBLIC_REACT_APP_ENV="production"
+ON_PREMISE="true"
 
 ###############################################################################
 # THIRD PARTY INTEGRATIONS
