chore: template variables

--- a/scripts/environment_variables/templates/stackend.env.template
+++ b/scripts/environment_variables/templates/stackend.env.template
@@ -62,21 +62,21 @@ STACKAI_LICENCE="{{STACKAI_LICENCE}}"
 
 # VARIABLE: Postgres Host
 # DESCRIPTION: This is the host where the Postgres instance will be available to the stackend containers.
-POSTGRES_DB_HOST='supavisor'
+POSTGRES_DB_HOST={{POSTGRES_DB_HOST | default("supavisor")}}
 
 # VARIABLE: Postgres Database Name
 # DESCRIPTION: This is the name of the Postgres database.
-POSTGRES_DB_NAME='postgres'
+POSTGRES_DB_NAME={{POSTGRES_DB_NAME | default("postgres")}}
 
 # VARIABLE: Postgres Port
 # DESCRIPTION: This is the port where the Postgres instance will be available to the stackend containers.
-POSTGRES_DB_PORT='6543'
+POSTGRES_DB_PORT={{POSTGRES_DB_PORT | default("6543")}}
 
 # VARIABLE: Postgres Username
 # DESCRIPTION: This is the username that will be used to authenticate requests to the Postgres instance.
 # The username is in the format <db_username>.<tenant_id>.
 # Leave this with the default value.
-POSTGRES_DB_USER='postgres.stackai'
+POSTGRES_DB_USER={{POSTGRES_DB_USER | default("postgres.stackai")}}
 
 # SECRET: Postgres Password
 # DESCRIPTION: This is the password that will be used to authenticate requests to the Postgres instance.
@@ -87,20 +87,20 @@ POSTGRES_DB_PASSWORD="{{POSTGRES_PASSWORD}}"
 MONGODB_URI="{{MONGODB_URI}}"
 
 # UNSTRUCTURED
-UNSTRUCTURED_URL=http://unstructured:8000/general/v0/general
+UNSTRUCTURED_URL={{UNSTRUCTURED_URL | default("http://unstructured:8000/general/v0/general")}}
 UNSTRUCTURED_API_KEY="{{UNSTRUCTURED_API_KEY}}"
 
 # VARIABLE: Celery Broker URL
 # DESCRIPTION: This is the url where the Celery broker will be available to the stackend containers.
-CELERY_BROKER_URL=redis://redis:6379
+CELERY_BROKER_URL={{CELERY_BROKER_URL | default("redis://redis:6379")}}
 
 # VARIABLE: Celery Backend URL
 # DESCRIPTION: This is the url where the Celery backend will be available to the stackend containers.
-CELERY_BACKEND_URL=redis://redis:6379
+CELERY_BACKEND_URL={{CELERY_BACKEND_URL | default("redis://redis:6379")}}
 
 # VARIABLE: Weaviate URL
 # DESCRIPTION: This is the url where the Weaviate instance will be available to the backend containers.
-WEAVIATE_URL=weaviate
+WEAVIATE_URL={{WEAVIATE_URL | default("weaviate")}}
 
 # SECRET: Weaviate Key
 # DESCRIPTION: This is the key that will be used to authenticate requests to the Weaviate instance.
@@ -108,27 +108,27 @@ WEAVIATE_KEY="{{WEAVIATE_API_KEY}}"
 
 # VARIABLE: Self-hosted Weaviate
 # DESCRIPTION: This is the flag that indicates if the Weaviate instance is self-hosted. Leave as true.
-SELF_HOSTED_WEAVIATE=true
+SELF_HOSTED_WEAVIATE={{SELF_HOSTED_WEAVIATE | default("true")}}
 
 # VARIABLE: Stackrepl URL
 # DESCRIPTION: This is the url where the Stackrepl service will be available to the backend containers.
-REPL_URL=http://stackrepl:8000/execute_code
+REPL_URL={{REPL_URL | default("http://stackrepl:8000/execute_code")}}
 
 # VARIABLE: Supabase URL
 # DESCRIPTION: This is the url where the Supabase services will be available to the backend containers.
-SUPABASE_URL=http://kong:8000
+SUPABASE_URL={{SUPABASE_URL | default("http://kong:8000")}}
 
 # VARIABLE: Redis URL
 # DESCRIPTION: This is the url where the Redis instance will be available to the backend containers.
-REDIS_URL=redis://redis:6379
+REDIS_URL={{REDIS_URL | default("redis://redis:6379")}}
 
 # ENVIRONMENT CONFIGURATION (LEAVE AS IS)
-ENVIRONMENT='production'
-DEPLOYMENT_ENVIRONMENT='production_stackend'
+ENVIRONMENT={{ENVIRONMENT | default("production")}}
+DEPLOYMENT_ENVIRONMENT={{DEPLOYMENT_ENVIRONMENT | default("production_stackend")}}
 
 # VARIABLE: Allow Parallel Flow Execution
 # DESCRIPTION: Whether the flow in the workflow builder is executed in parallel or sequentially.
-ALLOW_PARALLEL_FLOW_EXECUTION=true
+ALLOW_PARALLEL_FLOW_EXECUTION={{ALLOW_PARALLEL_FLOW_EXECUTION | default("true")}}
 
 # #########################################################
 # Third party services (fill the ones you intend to use)
@@ -136,222 +136,222 @@ ALLOW_PARALLEL_FLOW_EXECUTION=true
 
 # SENTRY CONFIGURATION
 # DSN for Sentry: It is recommended to leave it empty if you are not running Stackend in development mode.
-sentry_dsn=
+sentry_dsn={{sentry_dsn}}
 
 # ## LLM PROVIDERS ## #
 # OpenAI
-OPENAI_API_KEY=
-OPENAI_API_KEY_1=
-OPENAI_API_KEY_2=
-OPENAI_API_KEY_3=
-OPENAI_API_KEY_4=
-OPENAI_API_KEY_5=
+OPENAI_API_KEY={{OPENAI_API_KEY}}
+OPENAI_API_KEY_1={{OPENAI_API_KEY_1}}
+OPENAI_API_KEY_2={{OPENAI_API_KEY_2}}
+OPENAI_API_KEY_3={{OPENAI_API_KEY_3}}
+OPENAI_API_KEY_4={{OPENAI_API_KEY_4}}
+OPENAI_API_KEY_5={{OPENAI_API_KEY_5}}
 
 # Azure
-AZURE_APP_ID=
-AZURE_APP_SECRET=
-AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_KEY=
-AZURE_OPENAI_REGION=
+AZURE_APP_ID={{AZURE_APP_ID}}
+AZURE_APP_SECRET={{AZURE_APP_SECRET}}
+AZURE_OPENAI_ENDPOINT={{AZURE_OPENAI_ENDPOINT}}
+AZURE_OPENAI_KEY={{AZURE_OPENAI_KEY}}
+AZURE_OPENAI_REGION={{AZURE_OPENAI_REGION}}
 
 # Bedrock
-BEDROCK_ACCESS_KEY_ID=
-BEDROCK_PROFILE=
-BEDROCK_REGION=
-BEDROCK_SECRET_ACCESS_KEY=
+BEDROCK_ACCESS_KEY_ID={{BEDROCK_ACCESS_KEY_ID}}
+BEDROCK_PROFILE={{BEDROCK_PROFILE}}
+BEDROCK_REGION={{BEDROCK_REGION}}
+BEDROCK_SECRET_ACCESS_KEY={{BEDROCK_SECRET_ACCESS_KEY}}
 
 
 # POPLARML
-POPLARML_KEY=
+POPLARML_KEY={{POPLARML_KEY}}
 
 # Anthropic
-ANTHROPIC_API_KEY=
+ANTHROPIC_API_KEY={{ANTHROPIC_API_KEY}}
 
 # GROQ
-GROQ_AI_API_KEY=
+GROQ_AI_API_KEY={{GROQ_AI_API_KEY}}
 
 
 # PERPLEXITY
-PERPLEXITY_API_KEY=
+PERPLEXITY_API_KEY={{PERPLEXITY_API_KEY}}
 
 # Vertex
-VERTEX_AI_PROJECT_ID=
-VERTEX_AI_PROJECT_LOCATION=
-VERTEX_AI_SERVICE_ACCOUNT_MAIL=
-VERTEX_AI_SERVICE_ACCOUNT_PKEY=
-VERTEX_AI_SERVICE_ACCOUNT_PKEY_ID=
+VERTEX_AI_PROJECT_ID={{VERTEX_AI_PROJECT_ID}}
+VERTEX_AI_PROJECT_LOCATION={{VERTEX_AI_PROJECT_LOCATION}}
+VERTEX_AI_SERVICE_ACCOUNT_MAIL={{VERTEX_AI_SERVICE_ACCOUNT_MAIL}}
+VERTEX_AI_SERVICE_ACCOUNT_PKEY={{VERTEX_AI_SERVICE_ACCOUNT_PKEY}}
+VERTEX_AI_SERVICE_ACCOUNT_PKEY_ID={{VERTEX_AI_SERVICE_ACCOUNT_PKEY_ID}}
 
 # HUGGINGFACE
-HUGGINGFACE_API_KEY=
+HUGGINGFACE_API_KEY={{HUGGINGFACE_API_KEY}}
 
 # AIRTABLE
-AIRTABLE_CLIENT_ID=
-AIRTABLE_CLIENT_SECRET=
-AIRTABLE_CODE_VERIFIER=
+AIRTABLE_CLIENT_ID={{AIRTABLE_CLIENT_ID}}
+AIRTABLE_CLIENT_SECRET={{AIRTABLE_CLIENT_SECRET}}
+AIRTABLE_CODE_VERIFIER={{AIRTABLE_CODE_VERIFIER}}
 
 # AWS
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID={{AWS_ACCESS_KEY_ID}}
+AWS_SECRET_ACCESS_KEY={{AWS_SECRET_ACCESS_KEY}}
 
 # CALENDLY
-CALENDLY_CLIENT_ID=
-CALENDLY_CLIENT_SECRET=
+CALENDLY_CLIENT_ID={{CALENDLY_CLIENT_ID}}
+CALENDLY_CLIENT_SECRET={{CALENDLY_CLIENT_SECRET}}
 
 # CHAMALEON
-CHAMALEON_API_KEY=
+CHAMALEON_API_KEY={{CHAMALEON_API_KEY}}
 
 # COHERE
-COHERE_API_KEY=
+COHERE_API_KEY={{COHERE_API_KEY}}
 
 # DEEPGRAM
-DEEPGRAM_API_KEY=
+DEEPGRAM_API_KEY={{DEEPGRAM_API_KEY}}
 
 # DROPBOX
-DROPBOX_APP_KEY=
-DROPBOX_APP_SECRET=
+DROPBOX_APP_KEY={{DROPBOX_APP_KEY}}
+DROPBOX_APP_SECRET={{DROPBOX_APP_SECRET}}
 
 # EASYCRON
-EASYCRON_KEY=
+EASYCRON_KEY={{EASYCRON_KEY}}
 
 # ELEVEN LABS
-ELEVEN_LABS_API_KEY=
+ELEVEN_LABS_API_KEY={{ELEVEN_LABS_API_KEY}}
 
 # EXA
-EXA_API_KEY=
+EXA_API_KEY={{EXA_API_KEY}}
 
 # FIRECRAWL
-FIRECRAWL_KEY=
+FIRECRAWL_KEY={{FIRECRAWL_KEY}}
 
 # GMAIL
-GMAIL_CLIENT_ID=
-GMAIL_CLIENT_SECRET=
+GMAIL_CLIENT_ID={{GMAIL_CLIENT_ID}}
+GMAIL_CLIENT_SECRET={{GMAIL_CLIENT_SECRET}}
 
 # GOOGLE
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_PALM_API=
-GOOGLE_SHEET_PRIVATE_KEY=
-GOOGLE_SHEET_SPREADSHEET_ID=
-GOOGLE_SHEET_WORKSHEET_NAME=
-GOOGLE_WORKSPACE_CLIENT_ID=
-GOOGLE_WORKSPACE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID={{GOOGLE_CLIENT_ID}}
+GOOGLE_CLIENT_SECRET={{GOOGLE_CLIENT_SECRET}}
+GOOGLE_PALM_API={{GOOGLE_PALM_API}}
+GOOGLE_SHEET_PRIVATE_KEY={{GOOGLE_SHEET_PRIVATE_KEY}}
+GOOGLE_SHEET_SPREADSHEET_ID={{GOOGLE_SHEET_SPREADSHEET_ID}}
+GOOGLE_SHEET_WORKSHEET_NAME={{GOOGLE_SHEET_WORKSHEET_NAME}}
+GOOGLE_WORKSPACE_CLIENT_ID={{GOOGLE_WORKSPACE_CLIENT_ID}}
+GOOGLE_WORKSPACE_CLIENT_SECRET={{GOOGLE_WORKSPACE_CLIENT_SECRET}}
 
 # JIRA
-JIRA_CLIENT_ID=
-JIRA_CLIENT_SECRET=
+JIRA_CLIENT_ID={{JIRA_CLIENT_ID}}
+JIRA_CLIENT_SECRET={{JIRA_CLIENT_SECRET}}
 
 # ZENDESK
-ZENDESK_CLIENT_ID=
-ZENDESK_CLIENT_SECRET=
+ZENDESK_CLIENT_ID={{ZENDESK_CLIENT_ID}}
+ZENDESK_CLIENT_SECRET={{ZENDESK_CLIENT_SECRET}}
 
 # HUBSPOT
-HUBSPOT_CLIENT_ID=
-HUBSPOT_CLIENT_SECRET=
+HUBSPOT_CLIENT_ID={{HUBSPOT_CLIENT_ID}}
+HUBSPOT_CLIENT_SECRET={{HUBSPOT_CLIENT_SECRET}}
 
 # CALENDLY
-LOCAL_CALENDLY_CLIENT_ID=
-LOCAL_CALENDLY_CLIENT_SECRET=
+LOCAL_CALENDLY_CLIENT_ID={{LOCAL_CALENDLY_CLIENT_ID}}
+LOCAL_CALENDLY_CLIENT_SECRET={{LOCAL_CALENDLY_CLIENT_SECRET}}
 
 # MAILCHIMP
-MAILCHIMP_API_KEY=
+MAILCHIMP_API_KEY={{MAILCHIMP_API_KEY}}
 
 # MISTRAL
-MISTRAL_API_KEY=
+MISTRAL_API_KEY={{MISTRAL_API_KEY}}
 
 # NOTION
-NOTION_CLIENT_ID=
-NOTION_CLIENT_SECRET=
+NOTION_CLIENT_ID={{NOTION_CLIENT_ID}}
+NOTION_CLIENT_SECRET={{NOTION_CLIENT_SECRET}}
 
 # OUTLOOK
-OUTLOOK_CLIENT_ID=
-OUTLOOK_CLIENT_SECRET=
+OUTLOOK_CLIENT_ID={{OUTLOOK_CLIENT_ID}}
+OUTLOOK_CLIENT_SECRET={{OUTLOOK_CLIENT_SECRET}}
 
 
 # PINECONE
-PINECONE_API_KEY=
-PINECONE_ENV=
+PINECONE_API_KEY={{PINECONE_API_KEY}}
+PINECONE_ENV={{PINECONE_ENV}}
 
 # POLYTOMIC
-POLYTOMIC_API_KEY=
+POLYTOMIC_API_KEY={{POLYTOMIC_API_KEY}}
 
 
 # PSPDFKIT
-PSPDFKIT_API_KEY=
+PSPDFKIT_API_KEY={{PSPDFKIT_API_KEY}}
 
 # REDUCTO
-REDUCTO_AUTH_TOKEN=
+REDUCTO_AUTH_TOKEN={{REDUCTO_AUTH_TOKEN}}
 
 # REPLICATE
-REPLICATE_API_TOKEN=
+REPLICATE_API_TOKEN={{REPLICATE_API_TOKEN}}
 
 
 # RESEND
-RESEND_API_KEY=
+RESEND_API_KEY={{RESEND_API_KEY}}
 
 # S3 (Configured to use MinIO on-premise by default.)
 S3_ENDPOINT_URL="http://{{VIRTUAL_MACHINE_IP_OR_URL}}:9000"
-S3_USERCONTENT_PUBLIC_BUCKET=stack-ai-usercontent
-S3_AWS_ACCESS_KEY="supa-storage"
-S3_AWS_REGION="us-east-1"
+S3_USERCONTENT_PUBLIC_BUCKET={{S3_USERCONTENT_PUBLIC_BUCKET | default("stack-ai-usercontent")}}
+S3_AWS_ACCESS_KEY={{S3_AWS_ACCESS_KEY | default("supa-storage")}}
+S3_AWS_REGION={{S3_AWS_REGION | default("us-east-1")}}
 S3_AWS_SECRET_ACCESS_KEY="{{MINIO_PASSWORD}}"
 
 # SERPER
-SERPER_API_KEY=
-SERP_API_KEY=
+SERPER_API_KEY={{SERPER_API_KEY}}
+SERP_API_KEY={{SERP_API_KEY}}
 
 # STRIPE
-STRIPE_SECRET_KEY='?'
-STRIPE_WEBHOOK_SECRET=
+STRIPE_SECRET_KEY={{STRIPE_SECRET_KEY}}
+STRIPE_WEBHOOK_SECRET={{STRIPE_WEBHOOK_SECRET}}
 
 # TOGETHERAI
-TOGETHER_AI_API_KEY=
+TOGETHER_AI_API_KEY={{TOGETHER_AI_API_KEY}}
 
 # TWILIO
-TWILIO_AUTH_TOKEN=
+TWILIO_AUTH_TOKEN={{TWILIO_AUTH_TOKEN}}
 
 # TYPEFORM
-TYPEFORM_CLIENT_ID=
-TYPEFORM_CLIENT_SECRET=
+TYPEFORM_CLIENT_ID={{TYPEFORM_CLIENT_ID}}
+TYPEFORM_CLIENT_SECRET={{TYPEFORM_CLIENT_SECRET}}
 
 # WOLFRAM
-WOLFRAM_APP_ID=
+WOLFRAM_APP_ID={{WOLFRAM_APP_ID}}
 
 # SHAREPOINT
-sharepoint_client_id=
-sharepoint_client_secret=
+sharepoint_client_id={{sharepoint_client_id}}
+sharepoint_client_secret={{sharepoint_client_secret}}
 
 # SERVICENOW
-SERVICENOW_CLIENT_ID=
-SERVICENOW_CLIENT_SECRET=
+SERVICENOW_CLIENT_ID={{SERVICENOW_CLIENT_ID}}
+SERVICENOW_CLIENT_SECRET={{SERVICENOW_CLIENT_SECRET}}
 
 # APIFY
-APIFY_API_KEY=
-APIFY_MAX_CRAWL_DEPTH=
-APIFY_TOKEN=
+APIFY_API_KEY={{APIFY_API_KEY}}
+APIFY_MAX_CRAWL_DEPTH={{APIFY_MAX_CRAWL_DEPTH}}
+APIFY_TOKEN={{APIFY_TOKEN}}
 
 # APRYSE
-APRYSE_API_KEY=
+APRYSE_API_KEY={{APRYSE_API_KEY}}
 
 # CEREBRAS
-CEREBRAS_API_KEY=
+CEREBRAS_API_KEY={{CEREBRAS_API_KEY}}
 
 # CONFLUENCE
-CONFLUENCE_CLIENT_ID=
-CONFLUENCE_CLIENT_SECRET=
+CONFLUENCE_CLIENT_ID={{CONFLUENCE_CLIENT_ID}}
+CONFLUENCE_CLIENT_SECRET={{CONFLUENCE_CLIENT_SECRET}}
 
 # NGROK
-NGROK_AUTHTOKEN=
-NGROK_DOMAIN=
-NGROK_URL=
+NGROK_AUTHTOKEN={{NGROK_AUTHTOKEN}}
+NGROK_DOMAIN={{NGROK_DOMAIN}}
+NGROK_URL={{NGROK_URL}}
 
 # SCRAPIN
-SCRAPIN_API_KEY=
+SCRAPIN_API_KEY={{SCRAPIN_API_KEY}}
 
 # XAI
-XAI_API_KEY=
+XAI_API_KEY={{XAI_API_KEY}}
 
 # LLAMA PARSE
-llama_parse_api_key=
+llama_parse_api_key={{llama_parse_api_key}}
 
 # MULTI ON
-multi_on_api_key=
+multi_on_api_key={{multi_on_api_key}}
