--- a/scripts/environment_variables/templates/supabase.env.template
+++ b/scripts/environment_variables/templates/supabase.env.template
@@ -48,7 +48,7 @@ SUPABASE_PUBLIC_URL=http://{{VIRTUAL_MACHINE_IP_OR_URL}}:8800
 # Variable: POOLER_TENANT_ID
 # Description: Tenant ID for Supavisor. It is highly encouraged to leave this as stackai unless you really
 # need to change it.
-POOLER_TENANT_ID=stackai
+POOLER_TENANT_ID={{POOLER_TENANT_ID | default("stackai")}}
 
 ################################################################################################
 # Secrets
@@ -97,9 +97,9 @@ LOGFLARE_API_KEY="{{LOGFLARE_API_KEY}}"
 # Database - You can change these to any PostgreSQL database that has logical replication enabled.
 ############
 
-POSTGRES_HOST=db
-POSTGRES_DB=postgres
-POSTGRES_PORT=5432
+POSTGRES_HOST={{POSTGRES_HOST | default("db")}}
+POSTGRES_DB={{POSTGRES_DB | default("postgres")}}
+POSTGRES_PORT={{POSTGRES_PORT | default("5432")}}
 # default user is postgres
 
 ############
@@ -111,24 +111,24 @@ MINIO_PASSWORD="{{MINIO_PASSWORD}}"
 ############
 # Supavisor -- Database pooler
 ############
-POOLER_PROXY_PORT_TRANSACTION=6543
-POOLER_DEFAULT_POOL_SIZE=20
-POOLER_MAX_CLIENT_CONN=100
+POOLER_PROXY_PORT_TRANSACTION={{POOLER_PROXY_PORT_TRANSACTION | default("6543")}}
+POOLER_DEFAULT_POOL_SIZE={{POOLER_DEFAULT_POOL_SIZE | default("20")}}
+POOLER_MAX_CLIENT_CONN={{POOLER_MAX_CLIENT_CONN | default("100")}}
 
 
 ############
 # API Proxy - Configuration for the Kong Reverse proxy.
 ############
 
-KONG_HTTP_PORT=8800
-KONG_HTTPS_PORT=8443
+KONG_HTTP_PORT={{KONG_HTTP_PORT | default("8800")}}
+KONG_HTTPS_PORT={{KONG_HTTPS_PORT | default("8443")}}
 
 
 ############
 # API - Configuration for PostgREST.
 ############
 
-PGRST_DB_SCHEMAS=public,storage,graphql_public
+PGRST_DB_SCHEMAS={{PGRST_DB_SCHEMAS | default("public,storage,graphql_public")}}
 
 
 ############
@@ -136,49 +136,49 @@ PGRST_DB_SCHEMAS=public,storage,graphql_public
 ############
 
 ## General
-ADDITIONAL_REDIRECT_URLS=
-JWT_EXPIRY=3600
-DISABLE_SIGNUP=false
+ADDITIONAL_REDIRECT_URLS={{ADDITIONAL_REDIRECT_URLS | default("")}}
+JWT_EXPIRY={{JWT_EXPIRY | default("3600")}}
+DISABLE_SIGNUP={{DISABLE_SIGNUP | default("false")}}
 
 ## Mailer Config
-MAILER_URLPATHS_CONFIRMATION="/auth/v1/verify"
-MAILER_URLPATHS_INVITE="/auth/v1/verify"
-MAILER_URLPATHS_RECOVERY="/auth/v1/verify"
-MAILER_URLPATHS_EMAIL_CHANGE="/auth/v1/verify"
+MAILER_URLPATHS_CONFIRMATION={{MAILER_URLPATHS_CONFIRMATION | default("/auth/v1/verify")}}
+MAILER_URLPATHS_INVITE={{MAILER_URLPATHS_INVITE | default("/auth/v1/verify")}}
+MAILER_URLPATHS_RECOVERY={{MAILER_URLPATHS_RECOVERY | default("/auth/v1/verify")}}
+MAILER_URLPATHS_EMAIL_CHANGE={{MAILER_URLPATHS_EMAIL_CHANGE | default("/auth/v1/verify")}}
 
 ## Email auth
-ENABLE_EMAIL_SIGNUP=true
-ENABLE_EMAIL_AUTOCONFIRM=true
-SMTP_ADMIN_EMAIL=admin@example.com
-SMTP_HOST=supabase-mail
-SMTP_PORT=2500
-SMTP_USER=fake_mail_user
-SMTP_PASS=fake_mail_password
-SMTP_SENDER_NAME=fake_sender
-ENABLE_ANONYMOUS_USERS=false
+ENABLE_EMAIL_SIGNUP={{ENABLE_EMAIL_SIGNUP | default("true")}}
+ENABLE_EMAIL_AUTOCONFIRM={{ENABLE_EMAIL_AUTOCONFIRM | default("true")}}
+SMTP_ADMIN_EMAIL={{SMTP_ADMIN_EMAIL | default("admin@example.com")}}
+SMTP_HOST={{SMTP_HOST | default("supabase-mail")}}
+SMTP_PORT={{SMTP_PORT | default("2500")}}
+SMTP_USER={{SMTP_USER}}
+SMTP_PASS={{SMTP_PASS}}
+SMTP_SENDER_NAME={{SMTP_SENDER_NAME}}
+ENABLE_ANONYMOUS_USERS={{ENABLE_ANONYMOUS_USERS | default("false")}}
 
 ## Phone auth
-ENABLE_PHONE_SIGNUP=true
-ENABLE_PHONE_AUTOCONFIRM=true
+ENABLE_PHONE_SIGNUP={{ENABLE_PHONE_SIGNUP | default("true")}}
+ENABLE_PHONE_AUTOCONFIRM={{ENABLE_PHONE_AUTOCONFIRM | default("true")}}
 
 
 ############
 # Studio - Configuration for the Dashboard
 ############
 
-STUDIO_DEFAULT_ORGANIZATION=Enterprise
-STUDIO_DEFAULT_PROJECT=Enterprise Stack AI
+STUDIO_DEFAULT_ORGANIZATION={{STUDIO_DEFAULT_ORGANIZATION | default("Enterprise")}}
+STUDIO_DEFAULT_PROJECT={{STUDIO_DEFAULT_PROJECT | default("Enterprise Stack AI")}}
 
-STUDIO_PORT=3000
+STUDIO_PORT={{STUDIO_PORT | default("3000")}}
 
 # Enable webp support
-IMGPROXY_ENABLE_WEBP_DETECTION=true
+IMGPROXY_ENABLE_WEBP_DETECTION={{IMGPROXY_ENABLE_WEBP_DETECTION | default("true")}}
 
 ############
 # Functions - Configuration for Functions
 ############
 # NOTE: VERIFY_JWT applies to all functions. Per-function VERIFY_JWT is not supported yet.
-FUNCTIONS_VERIFY_JWT=false
+FUNCTIONS_VERIFY_JWT={{FUNCTIONS_VERIFY_JWT | default("false")}}
 
 ############
 # Logs - Configuration for Logflare
@@ -189,8 +189,8 @@ FUNCTIONS_VERIFY_JWT=false
 # Change vector.toml sinks to reflect this change
 
 # Docker socket location - this value will differ depending on your OS
-DOCKER_SOCKET_LOCATION=/var/run/docker.sock
+DOCKER_SOCKET_LOCATION={{DOCKER_SOCKET_LOCATION | default("/var/run/docker.sock")}}
 
 # Google Cloud Project details
-GOOGLE_PROJECT_ID=GOOGLE_PROJECT_ID
-GOOGLE_PROJECT_NUMBER=GOOGLE_PROJECT_NUMBER
+GOOGLE_PROJECT_ID={{GOOGLE_PROJECT_ID}}
+GOOGLE_PROJECT_NUMBER={{GOOGLE_PROJECT_NUMBER}}
