--- a/scripts/environment_variables/templates/stackweb.env.template
+++ b/scripts/environment_variables/templates/stackweb.env.template
@@ -65,8 +65,8 @@ SUPABASE_SERVICE_ROLE_KEY="{{SERVICE_ROLE_KEY}}"
 
 
 # Environment configuration. It is recommended to keep this with the default values.
-NEXT_PUBLIC_VERCEL_ENV="production"
-NEXT_PUBLIC_REACT_APP_ENV="production"
+NEXT_PUBLIC_VERCEL_ENV={{NEXT_PUBLIC_VERCEL_ENV | default("production")}}
+NEXT_PUBLIC_REACT_APP_ENV={{NEXT_PUBLIC_REACT_APP_ENV | default("production")}}
 
 ###############################################################################
 # THIRD PARTY INTEGRATIONS
@@ -75,40 +75,40 @@ NEXT_PUBLIC_REACT_APP_ENV="production"
 ###############################################################################
 
 
-NEXT_PUBLIC_AIRTABLE_CLIENT_ID="<your-airtable-client-id>"
-NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER="<your-airtable-code-verifier>"
-NEXT_PUBLIC_CHAMALEON_KEY="<your-chamaleon-key>"
-NEXT_PUBLIC_DROPBOX_CLIENT_ID="<your-dropbox-client-id>"
-NEXT_PUBLIC_GOOGLE_CLIENT_ID="<your-google-client-id>"
-NEXT_PUBLIC_HUBSPOT_CLIENT_ID="<your-hubspot-client-id>"
-NEXT_PUBLIC_NOTION_CLIENT_ID="<your-notion-client-id>"
-NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID="<your-notion-oauth-client-id>"
-NEXT_PUBLIC_OUTLOOK_CLIENT_ID="<your-outlook-client-id>"
-NEXT_PUBLIC_POSTHOG_API_KEY="<your-posthog-api-key>"
-NEXT_PUBLIC_POSTHOG_HOST="<your-posthog-host>"
-NEXT_PUBLIC_SENTRY_DSN=""
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="<your-stripe-publishable-key>"
-NEXT_PUBLIC_TYPEFORM_CLIENT_ID="<your-typeform-client-id>"
-NEXT_PUBLIC_SHAREPOINT_CLIENT_ID="<your-sharepoint-client-id>"
-NEXT_PUBLIC_CONFLUENCE_CLIENT_ID="<your-confluence-client-id>"
-NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID="<your-google-workspace-client-id>"
-NEXT_PUBLIC_STRIPE_CLIENT_ID="<your-stripe-client-id>"
-NEXT_PUBLIC_ZENDESK_CLIENT_ID="<your-zendesk-client-id>"
-NEXT_PUBLIC_LEADERBOARD_API_URL=
+NEXT_PUBLIC_AIRTABLE_CLIENT_ID={{NEXT_PUBLIC_AIRTABLE_CLIENT_ID}}
+NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER={{NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER}}
+NEXT_PUBLIC_CHAMALEON_KEY={{NEXT_PUBLIC_CHAMALEON_KEY}}
+NEXT_PUBLIC_DROPBOX_CLIENT_ID={{NEXT_PUBLIC_DROPBOX_CLIENT_ID}}
+NEXT_PUBLIC_GOOGLE_CLIENT_ID={{NEXT_PUBLIC_GOOGLE_CLIENT_ID}}
+NEXT_PUBLIC_HUBSPOT_CLIENT_ID={{NEXT_PUBLIC_HUBSPOT_CLIENT_ID}}
+NEXT_PUBLIC_NOTION_CLIENT_ID={{NEXT_PUBLIC_NOTION_CLIENT_ID}}
+NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID={{NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID}}
+NEXT_PUBLIC_OUTLOOK_CLIENT_ID={{NEXT_PUBLIC_OUTLOOK_CLIENT_ID}}
+NEXT_PUBLIC_POSTHOG_API_KEY={{NEXT_PUBLIC_POSTHOG_API_KEY}}
+NEXT_PUBLIC_POSTHOG_HOST={{NEXT_PUBLIC_POSTHOG_HOST}}
+NEXT_PUBLIC_SENTRY_DSN={{NEXT_PUBLIC_SENTRY_DSN}}
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY={{NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}}
+NEXT_PUBLIC_TYPEFORM_CLIENT_ID={{NEXT_PUBLIC_TYPEFORM_CLIENT_ID}}
+NEXT_PUBLIC_SHAREPOINT_CLIENT_ID={{NEXT_PUBLIC_SHAREPOINT_CLIENT_ID}}
+NEXT_PUBLIC_CONFLUENCE_CLIENT_ID={{NEXT_PUBLIC_CONFLUENCE_CLIENT_ID}}
+NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID={{NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID}}
+NEXT_PUBLIC_STRIPE_CLIENT_ID={{NEXT_PUBLIC_STRIPE_CLIENT_ID}}
+NEXT_PUBLIC_ZENDESK_CLIENT_ID={{NEXT_PUBLIC_ZENDESK_CLIENT_ID}}
+NEXT_PUBLIC_LEADERBOARD_API_URL={{NEXT_PUBLIC_LEADERBOARD_API_URL}}
 
 # Private keys used in stackweb container
 # Update the values of the integrations you want to use
-VERCEL_ENV="development"
-SHEET_ID="0"
-RESEND_API_KEY="<your-resend-api-key>"
-SLACK_CUSTOMER_SUPPORT_WEBHOOK="<your-slack-customer-support-webhook>"
-SLACK_SELF_HOSTED_WEBHOOK="<your-slack-self-hosted-webhook>"
-SPREADSHEET_ID="<your-spreadsheet-id>"
-STRIPE_SECRET_KEY="<your-stripe-secret-key>"
-STRIPE_WEBHOOK_SECRET="<your-stripe-webhook-secret>"
-GOOGLE_CLIENT_EMAIL="mail@example.io"
-GOOGLE_SERVICE_PRIVATE_KEY="<your-private-key>"
-FONTAWESOME_PACKAGE_TOKEN="<font-awesome-package-token>"
-TIPTAP_PRO_TOKEN=
-NPM_RC=
-REACT_APP_ENV="production"
+VERCEL_ENV={{VERCEL_ENV | default("production")}}
+SHEET_ID={{SHEET_ID | default("0")}}
+RESEND_API_KEY={{RESEND_API_KEY}}
+SLACK_CUSTOMER_SUPPORT_WEBHOOK={{SLACK_CUSTOMER_SUPPORT_WEBHOOK}}
+SLACK_SELF_HOSTED_WEBHOOK={{SLACK_SELF_HOSTED_WEBHOOK}}
+SPREADSHEET_ID={{SPREADSHEET_ID}}
+STRIPE_SECRET_KEY={{STRIPE_SECRET_KEY}}
+STRIPE_WEBHOOK_SECRET={{STRIPE_WEBHOOK_SECRET}}
+GOOGLE_CLIENT_EMAIL={{GOOGLE_CLIENT_EMAIL | default("mail@example.io")}}
+GOOGLE_SERVICE_PRIVATE_KEY={{GOOGLE_SERVICE_PRIVATE_KEY}}
+FONTAWESOME_PACKAGE_TOKEN={{FONTAWESOME_PACKAGE_TOKEN}}
+TIPTAP_PRO_TOKEN={{TIPTAP_PRO_TOKEN}}
+NPM_RC={{NPM_RC}}
+REACT_APP_ENV={{REACT_APP_ENV | default("production")}}
