chore: config + documentation

--- a/k8s/stackweb-deployment.yaml
+++ b/k8s/stackweb-deployment.yaml
@@ -24,7 +24,7 @@ spec:
         - envFrom:
             - configMapRef:
                 name: stackweb--env
-          image: stackweb
+          image: stackai.azurecr.io/stackai/stackweb:latest
           name: stackweb
           ports:
             - containerPort: 3000
