chore: expose ON_PREMISE in stackweb containers

--- a/stackweb/Dockerfile
+++ b/stackweb/Dockerfile
@@ -44,6 +44,7 @@ ARG SUPABASE_SERVICE_ROLE_KEY
 ARG FONTAWESOME_PACKAGE_TOKEN
 ARG NPM_RC
 ARG TIPTAP_PRO_TOKEN
+ARG ON_PREMISE
 ARG VERCEL_ENV
 
 RUN \
