--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -8,8 +8,9 @@
 #     reverse_proxy /storage/v1/* kong:8000
 #     reverse_proxy /functions/v1/* kong:8000
 #     reverse_proxy /analytics/v1/* kong:8000
-# 
-# 
+#     reverse_proxy /dashboard/* studio:3000
+#     tls internal
+#
 #     header {
 #         Content-Security-Policy "upgrade-insecure-requests"
 #     }
@@ -17,8 +18,10 @@
 
 # <your-stackweb-subdomain> {
 #     reverse_proxy /* stackweb:3000
+#     tls internal
 # }
 
 # <your-stackend-subdomain> {
 #     reverse_proxy /* stackend:8000
+#     tls internal
 # }
