feat: make update urls for services

--- a/scripts/environment_variables/templates/supabase.env.template
+++ b/scripts/environment_variables/templates/supabase.env.template
@@ -132,6 +132,13 @@ PGRST_DB_SCHEMAS={{PGRST_DB_SCHEMAS | default("public,storage,graphql_public")}}
 
 
 ############
+# SAML - Configuration for SAML authentication.
+############
+
+SAML_ENABLED={{SAML_ENABLED | default("false")}}
+SAML_PRIVATE_KEY="{{SAML_PRIVATE_KEY | default("")}}"
+
+############
 # Auth - Configuration for the GoTrue authentication server.
 ############
 
