--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,27 +1,38 @@
-# EXAMPLE CONFIGURATION. UNCOMMENT AND ADJUST AS NEEDED.
+#–– define a reusable "https" snippet with your cert+key
+# (https) {
+#     tls /etc/caddy/certificates/iteng.nu.chained.crt \
+#         /etc/caddy/certificates/private.key
 
-# <your-supabase-subdomain> {
-#     reverse_proxy /rest/v1/* kong:8000
-#     reverse_proxy /graphql/v1/* kong:8000
-#     reverse_proxy /auth/v1/* kong:8000
-#     reverse_proxy /realtime/v1/* kong:8000
-#     reverse_proxy /storage/v1/* kong:8000
-#     reverse_proxy /functions/v1/* kong:8000
-#     reverse_proxy /analytics/v1/* kong:8000
-#     reverse_proxy /dashboard/* studio:3000
-#     tls internal
-#
 #     header {
 #         Content-Security-Policy "upgrade-insecure-requests"
 #     }
 # }
 
-# <your-stackweb-subdomain> {
-#     reverse_proxy /* stackweb:3000
-#     tls internal
+# #–– supabase API
+# db.stackai.onprem.com {
+#     import https
+
+#     reverse_proxy /rest/v1/*    kong:8000
+#     reverse_proxy /graphql/v1/* kong:8000
+#     reverse_proxy /auth/v1/*    kong:8000
+#     reverse_proxy /realtime/v1/* kong:8000
+#     reverse_proxy /storage/v1/*  kong:8000
+#     reverse_proxy /functions/v1/* kong:8000
+#     reverse_proxy /analytics/v1/* kong:8000
+#     reverse_proxy /* studio:3000
+#     reverse_proxy /sso/* kong:8000
 # }
 
-# <your-stackend-subdomain> {
+# #–– your front-end
+# stackai.onprem.com {
+#     import https
+
+#     reverse_proxy /* stackweb:3000
+# }
+
+# #–– your API backend
+# api.stackai.onprem.com {
+#     import https
+
 #     reverse_proxy /* stackend:8000
-#     tls internal
 # }
