--- a/scripts/environment_variables/templates/stackweb.env.template
+++ b/scripts/environment_variables/templates/stackweb.env.template
@@ -76,40 +76,40 @@ ON_PREMISE={{ON_PREMISE | default("true")}}
 ###############################################################################
 
 
-NEXT_PUBLIC_AIRTABLE_CLIENT_ID={{NEXT_PUBLIC_AIRTABLE_CLIENT_ID | default("<your-airtable-client-id>")}}
-NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER={{NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER | default("<your-airtable-code-verifier>")}}
-NEXT_PUBLIC_CHAMALEON_KEY={{NEXT_PUBLIC_CHAMALEON_KEY | default("<your-chamaleon-key>")}}
-NEXT_PUBLIC_DROPBOX_CLIENT_ID={{NEXT_PUBLIC_DROPBOX_CLIENT_ID | default("<your-dropbox-client-id>")}}
-NEXT_PUBLIC_GOOGLE_CLIENT_ID={{NEXT_PUBLIC_GOOGLE_CLIENT_ID | default("<your-google-client-id>")}}
-NEXT_PUBLIC_HUBSPOT_CLIENT_ID={{NEXT_PUBLIC_HUBSPOT_CLIENT_ID | default("<your-hubspot-client-id>")}}
-NEXT_PUBLIC_NOTION_CLIENT_ID={{NEXT_PUBLIC_NOTION_CLIENT_ID | default("<your-notion-client-id>")}}
-NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID={{NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID | default("<your-notion-oauth-client-id>")}}
-NEXT_PUBLIC_OUTLOOK_CLIENT_ID={{NEXT_PUBLIC_OUTLOOK_CLIENT_ID | default("<your-outlook-client-id>")}}
-NEXT_PUBLIC_POSTHOG_API_KEY={{NEXT_PUBLIC_POSTHOG_API_KEY | default("<your-posthog-api-key>")}}
-NEXT_PUBLIC_POSTHOG_HOST={{NEXT_PUBLIC_POSTHOG_HOST | default("<your-posthog-host>")}}
-NEXT_PUBLIC_SENTRY_DSN={{NEXT_PUBLIC_SENTRY_DSN | default("<your-sentry-dsn>")}}
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY={{NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY | default("<your-stripe-publishable-key>")}}
-NEXT_PUBLIC_TYPEFORM_CLIENT_ID={{NEXT_PUBLIC_TYPEFORM_CLIENT_ID | default("<your-typeform-client-id>")}}
-NEXT_PUBLIC_SHAREPOINT_CLIENT_ID={{NEXT_PUBLIC_SHAREPOINT_CLIENT_ID | default("<your-sharepoint-client-id>")}}
-NEXT_PUBLIC_CONFLUENCE_CLIENT_ID={{NEXT_PUBLIC_CONFLUENCE_CLIENT_ID | default("<your-confluence-client-id>")}}
-NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID={{NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID | default("<your-google-workspace-client-id>")}}
-NEXT_PUBLIC_STRIPE_CLIENT_ID={{NEXT_PUBLIC_STRIPE_CLIENT_ID | default("<your-stripe-client-id>")}}
-NEXT_PUBLIC_ZENDESK_CLIENT_ID={{NEXT_PUBLIC_ZENDESK_CLIENT_ID | default("<your-zendesk-client-id>")}}
-NEXT_PUBLIC_LEADERBOARD_API_URL={{NEXT_PUBLIC_LEADERBOARD_API_URL | default("<your-leaderboard-api-url>")}}
+NEXT_PUBLIC_AIRTABLE_CLIENT_ID={{NEXT_PUBLIC_AIRTABLE_CLIENT_ID | default("[your-airtable-client-id]")}}
+NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER={{NEXT_PUBLIC_AIRTABLE_CODE_VERIFIER | default("[your-airtable-code-verifier]")}}
+NEXT_PUBLIC_CHAMALEON_KEY={{NEXT_PUBLIC_CHAMALEON_KEY | default("[your-chamaleon-key]")}}
+NEXT_PUBLIC_DROPBOX_CLIENT_ID={{NEXT_PUBLIC_DROPBOX_CLIENT_ID | default("[your-dropbox-client-id]")}}
+NEXT_PUBLIC_GOOGLE_CLIENT_ID={{NEXT_PUBLIC_GOOGLE_CLIENT_ID | default("[your-google-client-id]")}}
+NEXT_PUBLIC_HUBSPOT_CLIENT_ID={{NEXT_PUBLIC_HUBSPOT_CLIENT_ID | default("[your-hubspot-client-id]")}}
+NEXT_PUBLIC_NOTION_CLIENT_ID={{NEXT_PUBLIC_NOTION_CLIENT_ID | default("[your-notion-client-id]")}}
+NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID={{NEXT_PUBLIC_NOTION_OAUTH_CLIENT_ID | default("[your-notion-oauth-client-id]")}}
+NEXT_PUBLIC_OUTLOOK_CLIENT_ID={{NEXT_PUBLIC_OUTLOOK_CLIENT_ID | default("[your-outlook-client-id]")}}
+NEXT_PUBLIC_POSTHOG_API_KEY={{NEXT_PUBLIC_POSTHOG_API_KEY | default("[your-posthog-api-key]")}}
+NEXT_PUBLIC_POSTHOG_HOST={{NEXT_PUBLIC_POSTHOG_HOST | default("[your-posthog-host]")}}
+NEXT_PUBLIC_SENTRY_DSN={{NEXT_PUBLIC_SENTRY_DSN | default("[your-sentry-dsn]")}}
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY={{NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY | default("[your-stripe-publishable-key]")}}
+NEXT_PUBLIC_TYPEFORM_CLIENT_ID={{NEXT_PUBLIC_TYPEFORM_CLIENT_ID | default("[your-typeform-client-id]")}}
+NEXT_PUBLIC_SHAREPOINT_CLIENT_ID={{NEXT_PUBLIC_SHAREPOINT_CLIENT_ID | default("[your-sharepoint-client-id]")}}
+NEXT_PUBLIC_CONFLUENCE_CLIENT_ID={{NEXT_PUBLIC_CONFLUENCE_CLIENT_ID | default("[your-confluence-client-id]")}}
+NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID={{NEXT_PUBLIC_GOOGLE_WORKSPACE_CLIENT_ID | default("[your-google-workspace-client-id]")}}
+NEXT_PUBLIC_STRIPE_CLIENT_ID={{NEXT_PUBLIC_STRIPE_CLIENT_ID | default("[your-stripe-client-id]")}}
+NEXT_PUBLIC_ZENDESK_CLIENT_ID={{NEXT_PUBLIC_ZENDESK_CLIENT_ID | default("[your-zendesk-client-id]")}}
+NEXT_PUBLIC_LEADERBOARD_API_URL={{NEXT_PUBLIC_LEADERBOARD_API_URL | default("[your-leaderboard-api-url]")}}
 
 # Private keys used in stackweb container
 # Update the values of the integrations you want to use
 VERCEL_ENV={{VERCEL_ENV | default("production")}}
 SHEET_ID={{SHEET_ID | default("0")}}
-RESEND_API_KEY={{RESEND_API_KEY | default("<your-resend-api-key>")}}
-SLACK_CUSTOMER_SUPPORT_WEBHOOK={{SLACK_CUSTOMER_SUPPORT_WEBHOOK | default("<your-slack-customer-support-webhook>")}}
-SLACK_SELF_HOSTED_WEBHOOK={{SLACK_SELF_HOSTED_WEBHOOK | default("<your-slack-self-hosted-webhook>")}}
-SPREADSHEET_ID={{SPREADSHEET_ID | default("<your-spreadsheet-id>")}}
-STRIPE_SECRET_KEY={{STRIPE_SECRET_KEY | default("<your-stripe-secret-key>")}}
-STRIPE_WEBHOOK_SECRET={{STRIPE_WEBHOOK_SECRET | default("<your-stripe-webhook-secret>")}}
+RESEND_API_KEY={{RESEND_API_KEY | default("[your-resend-api-key]")}}
+SLACK_CUSTOMER_SUPPORT_WEBHOOK={{SLACK_CUSTOMER_SUPPORT_WEBHOOK | default("[your-slack-customer-support-webhook]")}}
+SLACK_SELF_HOSTED_WEBHOOK={{SLACK_SELF_HOSTED_WEBHOOK | default("[your-slack-self-hosted-webhook]")}}
+SPREADSHEET_ID={{SPREADSHEET_ID | default("[your-spreadsheet-id]")}}
+STRIPE_SECRET_KEY={{STRIPE_SECRET_KEY | default("[your-stripe-secret-key]")}}
+STRIPE_WEBHOOK_SECRET={{STRIPE_WEBHOOK_SECRET | default("[your-stripe-webhook-secret]")}}
 GOOGLE_CLIENT_EMAIL={{GOOGLE_CLIENT_EMAIL | default("mail@example.io")}}
-GOOGLE_SERVICE_PRIVATE_KEY={{GOOGLE_SERVICE_PRIVATE_KEY | default("<your-google-service-private-key>")}}
-FONTAWESOME_PACKAGE_TOKEN={{FONTAWESOME_PACKAGE_TOKEN | default("<your-fontawesome-package-token>")}}
-TIPTAP_PRO_TOKEN={{TIPTAP_PRO_TOKEN | default("<your-tiptap-pro-token>")}}
-NPM_RC={{NPM_RC | default("<your-npm-rc>")}}
+GOOGLE_SERVICE_PRIVATE_KEY={{GOOGLE_SERVICE_PRIVATE_KEY | default("[your-google-service-private-key]")}}
+FONTAWESOME_PACKAGE_TOKEN={{FONTAWESOME_PACKAGE_TOKEN | default("[your-fontawesome-package-token]")}}
+TIPTAP_PRO_TOKEN={{TIPTAP_PRO_TOKEN | default("[your-tiptap-pro-token]")}}
+NPM_RC={{NPM_RC | default("[your-npm-rc]")}}
 REACT_APP_ENV={{REACT_APP_ENV | default("production")}}
