chore: adding env vars

--- a/scripts/environment_variables/templates/stackend.env.template
+++ b/scripts/environment_variables/templates/stackend.env.template
@@ -265,7 +265,7 @@ NOTION_CLIENT_SECRET={{NOTION_CLIENT_SECRET}}
 # OUTLOOK
 OUTLOOK_CLIENT_ID={{OUTLOOK_CLIENT_ID}}
 OUTLOOK_CLIENT_SECRET={{OUTLOOK_CLIENT_SECRET}}
-
+OUTLOOK_TENANT_ID={{OUTLOOK_TENANT_ID}}
 
 # PINECONE
 PINECONE_API_KEY={{PINECONE_API_KEY}}
@@ -319,6 +319,7 @@ WOLFRAM_APP_ID={{WOLFRAM_APP_ID}}
 # SHAREPOINT
 sharepoint_client_id={{sharepoint_client_id}}
 sharepoint_client_secret={{sharepoint_client_secret}}
+sharepoint_tenant_id={{sharepoint_tenant_id}}
 
 # SERVICENOW
 SERVICENOW_CLIENT_ID={{SERVICENOW_CLIENT_ID}}
