add .gitignore for now using tf in this repo

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 .DS_Store
 .venv
 .vscode
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+terraform.tfvars
+*.auto.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
