Add namespace resources and fix StorageClass conflicts
      - Added namespace resources for MongoDB, Redis, and Weaviate
      - Renamed conflicting StorageClass names to be unique per component
      - Updated helmrelease patches to use new StorageClass names
      - Updated kustomizations to include namespace resources

--- a/components/helmreleases/mongodb/community-operator/2.0.3/aks/kustomization.yaml
+++ b/components/helmreleases/mongodb/community-operator/2.0.3/aks/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: mongodb
 resources:
   - ../base
+  - namespace.yaml
   - storageclass.yaml
 patchesStrategicMerge:
   - helmrelease-patch.yaml
