--- a/components/helmreleases/redis/21.2.14/aks/kustomization.yaml
+++ b/components/helmreleases/redis/21.2.14/aks/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: redis
 resources:
   - ../base
+  - namespace.yaml
   - storageclass.yaml
 patchesStrategicMerge:
   - helmrelease-patch.yaml
