--- a/components/helmreleases/supabase/24.03.03/aks/storageclass.yaml
+++ b/components/helmreleases/supabase/24.03.03/aks/storageclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: managed-csi-premium
+  name: supabase-premium-rwo
 provisioner: disk.csi.azure.com
 parameters:
   skuName: Premium_LRS
