--- a/components/helmreleases/weaviate/17.5.0/aks/helmrelease-patch.yaml
+++ b/components/helmreleases/weaviate/17.5.0/aks/helmrelease-patch.yaml
@@ -9,7 +9,7 @@ spec:
     # IMPORTANT: Use disk.csi.azure.com provisioner, NOT file.csi.azure.com
     storage:
       size: 32Gi
-      storageClassName: managed-csi-premium  # Azure managed disk with CSI driver
+      storageClassName: weaviate-premium-rwo  # Azure managed disk with CSI driver
     
     # Azure-optimized resource settings
     resources:
