--- a/components/helmreleases/weaviate/17.5.0/aks/kustomization.yaml
+++ b/components/helmreleases/weaviate/17.5.0/aks/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: weaviate
 resources:
   - ../base
+  - namespace.yaml
   - storageclass.yaml
 patchesStrategicMerge:
   - helmrelease-patch.yaml
