add some secrets for testing

--- a/components/helmreleases/supabase/24.03.03/aks/kustomization.yaml
+++ b/components/helmreleases/supabase/24.03.03/aks/kustomization.yaml
@@ -4,8 +4,7 @@ namespace: supabase
 resources:
   - ../base
   - namespace.yaml
-  - externalsecrets.yaml
-  - secretstore.yaml
+  - secrets.yaml
   - storageclass.yaml
 patchesStrategicMerge:
   - helmrelease-patch.yaml
