--- a/components/helmreleases/mongodb/community-operator/2.0.3/base/helmrepository.yaml
+++ b/components/helmreleases/mongodb/community-operator/2.0.3/base/helmrepository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: mongodb
-  namespace: flux-system
+  namespace: mongodb
 spec:
   interval: 5m
   url: https://mongodb.github.io/helm-charts
