--- a/components/helmreleases/supabase/24.03.03/base/helmrepository.yaml
+++ b/components/helmreleases/supabase/24.03.03/base/helmrepository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: supabase-community
-  namespace: flux-system
+  namespace: supabase
 spec:
   interval: 1h
   url: https://github.com/supabase-community/supabase-kubernetes
