correct namespaces of helm repositories

--- a/components/helmreleases/mongodb/community-operator/2.0.3/base/helmrelease.yaml
+++ b/components/helmreleases/mongodb/community-operator/2.0.3/base/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: mongodb
-        namespace: flux-system
+        namespace: mongodb
   values:
     operator:
       name: mongodb-kubernetes-operator
