--- a/components/helmreleases/redis/21.2.14/base/helmrepository.yaml
+++ b/components/helmreleases/redis/21.2.14/base/helmrepository.yaml
@@ -5,4 +5,5 @@ metadata:
   namespace: redis
 spec:
   interval: 10m
-  url: https://charts.bitnami.com/bitnami
+  type: oci
+  url: oci://registry-1.docker.io/bitnamicharts
